--- a/Task3/index.html
+++ b/Task3/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A simple webpage demonstrating semantic HTML and CSS styling.">
+    <meta name="description" content="A simple webpage demonstrating semantic HTML and CSS styling with interactive JavaScript features.">
     <title>Simple Webpage</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Header Section -->
+  
     <header>
         <nav>
             <ul>
@@ -20,21 +20,21 @@
         </nav>
     </header>
 
-    <!-- Main Content -->
+ 
     <main>
-        <!-- Hero Section -->
+  
         <section id="home" class="hero">
             <h1>Welcome to Our Simple Webpage</h1>
             <p>Your journey to learning web development starts here.</p>
         </section>
 
-        <!-- About Section -->
+       
         <section id="about">
             <h2>About Us</h2>
             <p>We are a team dedicated to teaching web development through practical examples.</p>
         </section>
 
-        <!-- Services Section -->
+  
         <section id="services">
             <h2>Our Services</h2>
             <article>
@@ -50,12 +50,41 @@
                 <p>Building robust and scalable web applications tailored to your needs.</p>
             </article>
         </section>
+
+    
+        <section id="contact">
+            <h2>Contact Us</h2>
+            <form id="contactForm">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
+                <span class="error" id="nameError"></span><br>
+
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+                <span class="error" id="emailError"></span><br>
+
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" required></textarea>
+                <span class="error" id="messageError"></span><br>
+
+                <button type="submit">Send</button>
+            </form>
+        </section>
+
+
+        <section id="dynamic-content">
+            <h2>Dynamic Content</h2>
+            <button id="loadContentBtn">Load More Content</button>
+            <div id="contentArea"></div>
+        </section>
     </main>
 
-    <!-- Footer Section -->
+ 
     <footer>
         <p>&copy; 2024 Simple Webpage. All rights reserved.</p>
         <a href="#home">Back to top</a>
     </footer>
+
+    <script src="index.js"></script>
 </body>
 </html>
