--- a/Task1/index.html
+++ b/Task1/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
+                <li><a href="#Home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -23,7 +23,7 @@
    
     <main>
       
-        <section id="home" class="hero">
+        <section id="Home" class="hero">
             <h1>Welcome to Our Simple Webpage</h1>
             <p>Your journey to learning web development starts here.</p>
         </section>
