--- a/Task3/index.html
+++ b/Task3/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A simple webpage demonstrating semantic HTML and CSS styling with interactive JavaScript features.">
     <title>Simple Webpage</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
   
